@@ -5,3 +5,5 @@ ExtUnixThreads
 ExtPervasivesThreads
 ThreadPool
 Cell
+ExtEvent
+ExtCondition
