@@ -18,20 +18,28 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *)
 
+open ExtMutex
+
+type 'a result =
+  | Not_ready
+  | Success   of 'a
+  | Failure   of exn
+
+
 type 'a cell =
     {
       mutex:  Mutex.t;
       ready : Condition.t;
-      result: 'a option ref
+      result: 'a result ref
     }
 let make () =
   { mutex = Mutex.create ();
     ready = Condition.create ();
-    result= ref None}
+    result= ref Not_ready}
 
 let post: 'a cell -> 'a -> unit = fun cell x ->
   Mutex.lock cell.mutex;
-  cell.result := Some x;
+  cell.result := Success x;
   Condition.signal cell.ready;
   Mutex.unlock cell.mutex
 
@@ -39,8 +47,17 @@ let get:   'a cell -> 'a = fun cell ->
   Mutex.lock cell.mutex;
   let rec aux () =
     match !(cell.result) with
-      | None   -> Condition.wait cell.ready cell.mutex; aux ()
-      | Some x -> x
+      | Not_ready -> Condition.wait cell.ready cell.mutex; aux ()
+      | Success x -> x
+      | Failure x -> 
+	  Mutex.unlock cell.mutex;
+	  raise x
   in let result = aux() in
     Mutex.unlock cell.mutex;
     result
+
+let fail: 'a cell -> exn -> unit = fun cell e ->
+  Mutex.lock cell.mutex;
+  cell.result := Failure e;
+  Condition.signal cell.ready;
+  Mutex.unlock cell.mutex;
